<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/tEjercicios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/background_buttons"
        android:text="@string/tSpinner"
        android:textColor="@color/colorText"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <Button
        android:id="@+id/btnList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_buttons"
        android:text="@string/tListview"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/btnSpinner"
        app:layout_constraintStart_toStartOf="@+id/btnSpinner"
        app:layout_constraintTop_toBottomOf="@+id/btnSpinner" />

    <Button
        android:id="@+id/btnGrid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_buttons"
        android:text="@string/tGridview"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/btnList"
        app:layout_constraintStart_toStartOf="@+id/btnList"
        app:layout_constraintTop_toBottomOf="@+id/btnList" />

    <Button
        android:id="@+id/btnFragments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_buttons"
        android:text="@string/tFragments"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/btnGrid"
        app:layout_constraintStart_toStartOf="@+id/btnGrid"
        app:layout_constraintTop_toBottomOf="@+id/btnGrid" />

</androidx.constraintlayout.widget.ConstraintLayout>